Esta quase conluido, falta testar

--- a/configSite/makefile
+++ b/configSite/makefile
@@ -5,10 +5,10 @@ CC = g++
 FLAGS = -Wall
 SOURCE = ./src/
 BIN = ./bin/
-DEPS = ./lib/ConfigApacheTool.h
+DEPS = ./lib/ConfigSiteTool.h
 MSNAME = main.cpp
-CNAME = ConfigApacheTool.cpp
-NAME = configApacheTool
+CNAME = ConfigSiteTool.cpp
+NAME = ConfigSiteTool
 FILE1 = $(SOURCE)$(MSNAME)
 FILE2 = $(SOURCE)$(CNAME)
 TARGET = $(BIN)$(NAME)
