--- a/configSite/makefile
+++ b/configSite/makefile
@@ -3,15 +3,39 @@
 
 CC = g++
 FLAGS = -Wall
+
+# PATHS
 SOURCE = ./src/
+LIB = ./lib/
 BIN = ./bin/
-DEPS = ./lib/ConfigSiteTool.h
+
+# HEADERS
+INCLUDE_H = includes.h
+
+# CPP FILES
 MSNAME = main.cpp
-CNAME = ConfigSiteTool.cpp
+ALLAPACHE = AllApache.cpp
+ALLCAKEPHP = AllCakePHP.cpp
+ALLCOMMANDS = AllCommands.cpp
+CONFIGSITETOOL = ConfigSiteTool.cpp
+
+# BIN NAME
 NAME = ConfigSiteTool
-FILE1 = $(SOURCE)$(MSNAME)
-FILE2 = $(SOURCE)$(CNAME)
+
+# DEFINE TARGET HEADER
+HEADER = $(LIB)$(INCLUDE_H)
+
+# DEFINE TARGET CPP FILES
+FILE = $(SOURCE)$(MSNAME)
+FILE1 = $(SOURCE)$(ALLAPACHE)
+FILE2 = $(SOURCE)$(ALLCAKEPHP)
+FILE3 = $(SOURCE)$(ALLCOMMANDS)
+FILE4 = $(SOURCE)$(CONFIGSITETOOL)
+ALLFILE = $(FILE1) $(FILE2) $(FILE3) $(FILE4)
+
+# DEFINE BIN FILE
 TARGET = $(BIN)$(NAME)
+
 SUDO = sudo
 CREATEBINPATH = $(SUDO) mkdir -p $(BIN)
 
@@ -21,5 +45,5 @@ CREATEBINPATH = $(SUDO) mkdir -p $(BIN)
 # linhas que contêm echo
 subsystem:
 	@$(CREATEBINPATH)
-	@$(SUDO) $(CC) $(FLAGS) $(FILE1) $(DEPS) $(FILE2) -o $(TARGET)	# Cria o executavel
+	@$(SUDO) $(CC) $(FLAGS) $(FILE) $(HEADER) $(ALLFILE) -o $(TARGET)	# Cria o executavel
 	@echo O executavel $(NAME) foi criado com sucesso.
