--- a/configSite/Makefile
+++ b/configSite/Makefile
@@ -16,7 +16,7 @@ INCLUDE_H = includes.h
 MSNAME = main.cpp
 ALLAPACHE = AllApache.cpp
 ALLCAKEPHP = AllCakePHP.cpp
-ALLCOMMANDS = AllCommands.cpp
+ALLOPERATIONGLOBAL = AllOperationGlobal.cpp
 CONFIGSITETOOL = ConfigSiteTool.cpp
 
 # BIN NAME
@@ -29,7 +29,7 @@ HEADER = $(LIB)$(INCLUDE_H)
 FILE = $(SOURCE)$(MSNAME)
 FILE1 = $(SOURCE)$(ALLAPACHE)
 FILE2 = $(SOURCE)$(ALLCAKEPHP)
-FILE3 = $(SOURCE)$(ALLCOMMANDS)
+FILE3 = $(SOURCE)$(ALLOPERATIONGLOBAL)
 FILE4 = $(SOURCE)$(CONFIGSITETOOL)
 ALLFILE = $(FILE1) $(FILE2) $(FILE3) $(FILE4)
 
