init nginx server

--- a/configSite/Makefile
+++ b/configSite/Makefile
@@ -12,13 +12,17 @@ BIN = ./bin/
 # HEADERS
 INCLUDE_H = includes.h
 
-# CPP FILES
+#### CPP FILES ####
+# DATA BASE & MAIN & OTHERS
 MSNAME = main.cpp
-ALLAPACHE = AllApache.cpp
-ALLCAKEPHP = AllCakePHP.cpp
 ALLOPERATIONGLOBAL = AllOperationGlobal.cpp
 ALLDATABASE = AllDataBase.cpp
 CONFIGSITETOOL = ConfigSiteTool.cpp
+# SERVERS
+ALLAPACHE = AllApache.cpp
+ALLNGINX = AllNginx.cpp
+# FRAMEWORKS
+ALLCAKEPHP = AllCakePHP.cpp
 
 # BIN NAME
 NAME = configSite
@@ -27,12 +31,16 @@ NAME = configSite
 HEADER = $(LIB)$(INCLUDE_H)
 
 # DEFINE TARGET CPP FILES
+# DATA BASE & MAIN & OTHERS
 FILE = $(SOURCE)$(MSNAME)
-FILE1 = $(SOURCE)$(ALLAPACHE)
-FILE2 = $(SOURCE)$(ALLCAKEPHP)
 FILE3 = $(SOURCE)$(ALLOPERATIONGLOBAL)
-FILE4 = $(SOURCE)$(CONFIGSITETOOL)
 FILE5 = $(SOURCE)$(ALLDATABASE)
+FILE4 = $(SOURCE)$(CONFIGSITETOOL)
+# SERVERS
+FILE1 = $(SOURCE)$(ALLAPACHE)
+FILE6 = $(SOURCE)$(ALLNGINX)
+# FRAMEWORKS
+FILE2 = $(SOURCE)$(ALLCAKEPHP)
 ALLFILE = $(FILE1) $(FILE2) $(FILE3) $(FILE4) $(FILE5)
 
 # DEFINE BIN FILE
