--- a/configSite/Makefile
+++ b/configSite/Makefile
@@ -41,7 +41,7 @@ FILE1 = $(SOURCE)$(ALLAPACHE)
 FILE6 = $(SOURCE)$(ALLNGINX)
 # FRAMEWORKS
 FILE2 = $(SOURCE)$(ALLCAKEPHP)
-ALLFILE = $(FILE1) $(FILE2) $(FILE3) $(FILE4) $(FILE5)
+ALLFILE = $(FILE1) $(FILE2) $(FILE3) $(FILE4) $(FILE5) $(FILE6)
 
 # DEFINE BIN FILE
 TARGET = $(BIN)$(NAME)
